--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,13 @@ jobs:
 
       - name: Install Go
         uses: actions/setup-go@v4
-        with: { go-version: '1.20' }
+        with:
+          go-version: '1.20'
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
-        with: { terraform_version: '1.4.4' }
+        with:
+          terraform_version: '1.4.4'
 
       - name: Install Task
         uses: arduino/setup-task@v1
